Switch to package ImageEvaluator

--- a/Cityscapes_Data_Browser.ipynb
+++ b/Cityscapes_Data_Browser.ipynb
@@ -3769,33 +3769,8 @@
     }
    ],
    "source": [
-    "from collections import defaultdict\n",
+    "from deeplab3.utils.metrics import ImageEvaluator\n",
     "from tqdm import tqdm\n",
-    "\n",
-    "class ImageEvaluator(object):\n",
-    "    def __init__(self):\n",
-    "        self.images_by_accuracy = defaultdict(list)\n",
-    "        self.images_by_iou = defaultdict(list)\n",
-    "        self.image_stats = defaultdict(dict)\n",
-    "\n",
-    "    def add_image(self, gt_image, pre_image, img_id):\n",
-    "        accuracy = (np.equal(gt_image, pre_image).sum()/float(gt_image.numel())).item()\n",
-    "        intersection = np.logical_and(gt_image, pre_image).sum()\n",
-    "        union = np.logical_and(gt_image, pre_image).sum()+np.logical_xor(gt_image, pre_image).sum()\n",
-    "        iou = float(intersection)/float(union)\n",
-    "\n",
-    "        self.images_by_iou[iou].append(img_id)\n",
-    "        self.images_by_accuracy[accuracy].append(img_id)\n",
-    "        self.image_stats[img_id] = {'iou': iou,\n",
-    "                                       'accuracy': accuracy}\n",
-    "\n",
-    "    def top_n(self, n=10):\n",
-    "        return {'accuracy': {key: self.images_by_accuracy[key] for key in sorted(self.images_by_accuracy)[:n]},\n",
-    "                'iou': {key: self.images_by_iou[key] for key in sorted(self.images_by_iou)[:n]}}\n",
-    "\n",
-    "    def bottom_n(self, n=10):\n",
-    "        return {'accuracy': {key: self.images_by_accuracy[key] for key in sorted(self.images_by_accuracy, reverse=True)[:n]},\n",
-    "                'iou': {key: self.images_by_iou[key] for key in sorted(self.images_by_iou, reverse=True)[:n]}}\n",
     "\n",
     "img_evaluator_rgbd = ImageEvaluator()\n",
     "img_evaluator_rgb = ImageEvaluator()\n",
