Test network robustness for differing levels of darkness

--- a/visualization_scripts/compare_models.ipynb
+++ b/visualization_scripts/compare_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,31 +16,9 @@
     "\n",
     "from deeplab3.dataloaders import make_data_loader\n",
     "from deeplab3.config.defaults import get_cfg_defaults\n",
-    "from deeplab3.test import Tester"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['../run/older/coco_rgb_resnet_scratch/2020_04_10/parameters.txt.yaml', '../run/older/coco_rgb_resnet_scratch/2020-03-29/parameters.txt.yaml', '../run/older/cityscapes_hha_midfusion_pretrained/2020_04_06/parameters.txt.yaml', '../run/older/cityscapes_rgbd_resnet_deeplab/2020-03-30/parameters.txt.yaml', '../run/older/cityscapes_rgbd_resnet_deeplab/2020-03-30c/parameters.txt.yaml', '../run/older/cityscapes_rgbd_resnet_deeplab/2020_04_06/parameters.txt.yaml', '../run/older/cityscapes_synth_rgbd_xception_fine_coarse/2020_04_25-14_32_21/parameters.txt.yaml', '../run/older/cityscapes_rgbd_xception_fine_coarse/2020_04_28-01_42_47/parameters.txt.yaml', '../run/older/cityscapes_synthetic/2020_04_10/parameters.txt.yaml', '../run/older/cityscapes_synthetic/2020-03-30b/parameters.txt.yaml', '../run/older/cityscapes_rgbd_xception_fine/2020_04_26-20_04_07/parameters.txt.yaml', '../run/older/cityscapes_hha_midfusion/2020_04_16/parameters.txt.yaml', '../run/older/cityscapes_synth_rgbd_xception_fine/2020_04_24-16_25_56/parameters.txt.yaml', '../run/older/sunrgbd_rgbd_resnet_deeplab/2020-02-26/parameters.txt.yaml', '../run/older/cityscapes_rgb_xception_pt_fine_coarse/2020_04_27-19_54_52/parameters.txt.yaml', '../run/older/cityscapes_midfusion_xception/2020_04_23/parameters.txt.yaml', '../run/older/cityscapes_rgbd_xception/2020_04_18/parameters.txt.yaml', '../run/older/cityscapes_rgb_xception_pt/2020_04_27-01_43_58/parameters.txt.yaml', '../run/older/cityscapes_rgb_xception_pt/2020_04_16/parameters.txt.yaml', '../run/older/cityscapes_hha_latefusion_pretrained/2020_04_06/parameters.txt.yaml', '../run/older/scenenet_rgbd_resnet_deeplab/2020-03-24/parameters.txt.yaml', '../run/older/scenenet_rgbd_resnet_deeplab/2020-03-14/parameters.txt.yaml', '../run/older/cityscapes_synth_rgbd_xception/2020_04_26-20_10_19/parameters.txt.yaml', '../run/older/cityscapes_synth_rgbd_xception/2020_04_18/parameters.txt.yaml', '../run/older/cityscapes_hha_latefusion/2020_04_16/parameters.txt.yaml', '../run/older/cityscapes_rgb_imagenet/2020_04_10/parameters.txt.yaml', '../run/older/cityscapes_rgb_imagenet/2020-03-30/parameters.txt.yaml', '../run/older/cityscapes_rgb_xception_pt_fine/2020_04_18/parameters.txt.yaml', '../run/older/coco_rgbd_resnet_deeplab/2020_04_10/parameters.txt.yaml', '../run/older/coco_rgbd_resnet_deeplab/2020-02-24/parameters.txt.yaml', '../run/older/coco_rgb_resnet_deeplab/2020-03-13/parameters.txt.yaml', '../run/older/coco_rgb_resnet_deeplab/2020_04_10/parameters.txt.yaml', '../run/older/coco_rgbd_resnet/2020_04_24-15_35_25/parameters.txt.yaml', '../run/scenenet/scenenet_depthaware/2020_09_25-18_24_55/parameters.yaml', '../run/scenenet/scenenet_depthaware/2020_09_17-09_48_41/parameters.yaml', '../run/scenenet/scenenet_depthaware/2020_09_23-18_31_20/parameters.yaml', '../run/scenenet/scenenet_depthaware/2020_09_17-09_49_31/parameters.yaml', '../run/scenenet/scenenet_depthaware/2020_09_23-19_14_53/parameters.yaml', '../run/scenenet/scenenet_rgbd_xception_low_light/2020_09_28-08_36_05/parameters.yaml', '../run/scenenet/scenenet_rgbd_xception_low_light/2020_08_25-17_36_30/parameters.yaml', '../run/scenenet/scenenet_rgbd_xception_low_light/2020_09_28-08_32_05/parameters.yaml', '../run/scenenet/scenenet_rgbd_xception_low_light/2020_09_25-22_39_32/parameters.yaml', '../run/scenenet/scenenet_rgbd_xception_low_light/2020_09_25-23_11_51/parameters.yaml', '../run/scenenet/scenenet_rgb_xception/2020_09_17-22_14_43/parameters.yaml', '../run/scenenet/scenenet_rgb_xception_low_light/2020_09_25-23_02_53/parameters.yaml', '../run/scenenet/scenenet_rgb_xception_low_light/2020_09_17-09_02_34/parameters.yaml', '../run/scenenet/scenenet_rgb_xception_low_light/2020_09_25-23_09_31/parameters.yaml', '../run/scenenet/scenenet_rgbd_xception/2020_09_17-22_10_19/parameters.yaml', '../run/scenenet/scenenet_rgbd_resnet_deeplab/2020_08_06-23_47_31/parameters.yaml', '../run/cityscapes/cityscapes_hha_latefusion_scratch/2020_09_29-14_09_39/parameters.yaml', '../run/cityscapes/cityscapes_depthaware_fine_coarse/2020_08_09-10_04_31/parameters.yaml', '../run/cityscapes/cityscapes_depthaware_fine_coarse/2020_08_06-16_44_58/parameters.yaml', '../run/cityscapes/cityscapes_rgb_xception_scenenet/2020_09_25-22_09_12/parameters.yaml', '../run/cityscapes/cityscapes_rgbd_xception_fine_coarse/2020_08_20-15_58_16/parameters.yaml', '../run/cityscapes/cityscapes_rgbd_xception_fine/2020_08_19-17_44_07/parameters.yaml', '../run/cityscapes/cityscapes_hha_midfusion/2020_09_29-03_29_42/parameters.yaml', '../run/cityscapes/cityscapes_synth_rgbd_xception_fine/2020_08_03-16_58_35/parameters.yaml', '../run/cityscapes/cityscapes_rgb_xception_pt_fine_coarse/2020_08_03-15_41_22/parameters.yaml', '../run/cityscapes/cityscapes_rgb_xception_pt/2020_09_25-22_48_35/parameters.yaml', '../run/cityscapes/cityscapes_depthaware_fine/2020_08_04-17_18_18/parameters.yaml', '../run/cityscapes/cityscapes_rgbd_xception_low_light/2020_09_25-19_32_43/parameters.yaml', '../run/cityscapes/cityscapes_hha_midfusion_scratch/2020_09_29-03_32_00/parameters.yaml', '../run/cityscapes/cityscapes_synth_rgbd_xception/2020_08_25-17_38_38/parameters.yaml', '../run/cityscapes/cityscapes_rgbd_resnet_coco_fine/2020_08_06-23_14_45/parameters.yaml', '../run/cityscapes/cityscapes_rgbd_resnet_coco_fine/2020_08_07-17_11_09/parameters.yaml', '../run/cityscapes/cityscapes_rgbd_resnet_coco_fine/2020_08_05-18_17_41/parameters.yaml', '../run/cityscapes/cityscapes_rgbd_resnet_coco_fine/2020_08_07-14_44_47/parameters.yaml', '../run/cityscapes/cityscapes_hha_latefusion/2020_09_29-03_32_23/parameters.yaml', '../run/cityscapes/cityscapes_rgb_xception_low_light/2020_09_25-19_36_53/parameters.yaml', '../run/cityscapes/cityscapes_depthaware_coarse/2020_08_07-11_48_47/parameters.yaml', '../run/cityscapes/cityscapes_rgbd_xception_scenenet/2020_09_25-22_15_00/parameters.yaml', '../run/coco/coco_rgb_pascal_low_light/2020_08_19-17_42_57/parameters.yaml', '../run/coco/coco_rgb_xception_scenenet/2020_09_25-22_18_33/parameters.yaml', '../run/coco/coco_rgbd_pascal_low_light/2020_09_23-15_59_09/parameters.yaml', '../run/coco/coco_rgbd_pascal_low_light/2020_08_19-17_41_24/parameters.yaml', '../run/coco/coco_rgbd_pascal_low_light/2020_09_23-16_36_15/parameters.yaml', '../run/coco/coco_rgbd_xception/2020_09_25-19_45_43/parameters.yaml', '../run/coco/coco_rgbd_xception_scenenet/2020_09_25-22_14_43/parameters.yaml', '../run/coco/coco_xception/2020_08_27-22_52_53/parameters.yaml', '../run/coco/coco_rgb_xception/2020_09_25-21_42_15/parameters.yaml']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# traverse root directory, and list directories as dirs and files as files\n",
-    "model_configs = []\n",
-    "for root, dirs, files in os.walk(\"../run/\"):\n",
-    "    path = root.split(os.sep)\n",
-    "    for file in files:\n",
-    "        if file == \"parameters.txt.yaml\" or file==\"parameters.yaml\":\n",
-    "            model_configs.append(os.path.join(root, file))\n",
-    "print(model_configs)"
+    "from deeplab3.test import Tester\n",
+    "\n",
+    "import model_utils"
    ]
   },
   {
@@ -60,89 +38,25 @@
     }
    ],
    "source": [
+    "model_configs = model_utils.get_all_models(\"../run/\")\n",
     "len(model_configs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def flatten_cfg(cfg_dict, prefix=None):\n",
-    "    flattened = {}\n",
-    "    for key, value in cfg_dict.items():\n",
-    "        if prefix is None:\n",
-    "            prefixed_key = key\n",
-    "        else:\n",
-    "            prefixed_key = \"{}.{}\".format(prefix, key)\n",
-    "            \n",
-    "        if not isinstance(value, dict):\n",
-    "            flattened[prefixed_key] = value\n",
-    "        else:\n",
-    "            flattened.update(flatten_cfg(value, prefixed_key))\n",
-    "    return flattened"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def match_cfg_versions(cfg_filepath):\n",
-    "    cfg = get_cfg_defaults()\n",
-    "    with open(cfg_filepath, 'r') as f:\n",
-    "        model_cfg = yaml.load(f)\n",
-    "        model_cfg = flatten_cfg(model_cfg)\n",
-    "    for key, value in model_cfg.items():\n",
-    "        if not key.startswith(\"CHECKPOINT\"):\n",
-    "            try:\n",
-    "                if key == \"TRAIN.EVAL_INTERVAL\":\n",
-    "                    value = float(value)\n",
-    "                if key == \"DATASET.USE_DEPTH\":\n",
-    "                    key = \"DATASET.MODE\"\n",
-    "                    if value:\n",
-    "                        value = \"RGBD\"\n",
-    "                    else:\n",
-    "                        value = \"RGB\"\n",
-    "                if key == \"DATASET.CHANNELS\":\n",
-    "                    key = \"MODEL.INPUT_CHANNELS\"\n",
+    "low_light_models = []\n",
     "\n",
-    "                cfg.merge_from_list([key, value])\n",
-    "            except ValueError as e:\n",
-    "                print(e)\n",
-    "            except AssertionError as e:\n",
-    "                print(e)\n",
+    "for cfg_filepath in model_configs:\n",
+    "    try:\n",
+    "        cfg = model_utils.match_cfg_versions(cfg_filepath)\n",
+    "        if cfg.DATASET.DARKEN.DARKEN:\n",
+    "            low_light_models.append(cfg_filepath)\n",
     "\n",
-    "    if cfg.DATASET.ROOT.startswith(\"datasets\"):\n",
-    "        cfg.merge_from_list(['DATASET.ROOT', \"../\" + cfg.DATASET.ROOT])\n",
-    "    if cfg.DATASET.NAME == \"sunrgbd\":\n",
-    "        cfg.DATASET.ROOT = \"../datasets/SUNRGBD/\"\n",
-    "    elif cfg.DATASET.NAME == \"scenenet\":\n",
-    "        cfg.DATASET.ROOT = \"../datasets/scenenet/\"\n",
-    "\n",
-    "    return cfg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_model(cfg):\n",
-    "    torch.manual_seed(cfg.SYSTEM.SEED)\n",
-    "    train_loader, val_loader, test_loader, num_classes = make_data_loader(cfg)\n",
-    "    tester = Tester(cfg)\n",
-    "    output, mat, metrics = tester.run(val_loader, num_classes)\n",
-    "\n",
-    "    with open(cfg.CHECKPOINT.DIRECTORY + '/validation_report.txt', 'w') as f:\n",
-    "        f.write(output)\n",
-    "\n",
-    "    sio.savemat(cfg.CHECKPOINT.DIRECTORY + '/confusion.mat', {'confusion': mat})\n",
-    "    \n",
-    "    return metrics"
+    "print(low_light_models)"
    ]
   },
   {
@@ -1756,7 +1670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
