Test network robustness for differing levels of darkness

--- a/visualization_scripts/Test_Degree_of_Darkness.ipynb
+++ b/visualization_scripts/Test_Degree_of_Darkness.ipynb
@@ -290,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "darken_test_2020-10-13 09:17:47.439175.pkl\n"
+      "darken_test_2020-10-13T09:18:49.697620.pkl\n"
      ]
     }
    ],
@@ -305,10 +305,11 @@
     "import pickle\n",
     "import datetime\n",
     "\n",
-    "print('darken_test_{}.pkl'.format(datetime.datetime.now()))\n",
+    "filename = 'darken_test_{}.pkl'.format(datetime.datetime.now().isoformat(timespec='auto'))\n",
+    "print(filename)\n",
     "\n",
-    "# with open('darken_test_{}.pkl'.format(datetime.now()), 'ab') as fp:\n",
-    "#     pickle.dump(model_output, fp) "
+    "with open(filename, 'ab') as fp:\n",
+    "    pickle.dump(model_output, fp) "
    ]
   },
   {
