Documented and updated visualization scripts

--- a/visualization_scripts/Artificial Darkening Demo.ipynb
+++ b/visualization_scripts/Artificial Darkening Demo.ipynb
@@ -213,7 +213,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Uncomment to save figure \n",
-    "#fig.savefig(figure_prefix + '_dark_grid.eps', format='eps', dpi=300)"
+    "#fig.savefig(figure_prefix + 'dark_grid.eps', format='eps', dpi=300)"
    ]
   },
   {
@@ -288,7 +288,7 @@
     "        \n",
     "plt.tight_layout()\n",
     "\n",
-    "#fig.savefig(figure_prefix + '_noise_grid.eps', format='eps', dpi=300)"
+    "#fig.savefig(figure_prefix + 'noise_grid.eps', format='eps', dpi=300)"
    ]
   },
   {
@@ -306,11 +306,11 @@
    "outputs": [],
    "source": [
     "img = noise_imgs[0]\n",
-    "img.save(fp=figure_prefix + '_noise.gif', format='GIF', append_images=noise_imgs[1:],\n",
+    "img.save(fp=figure_prefix + 'noise.gif', format='GIF', append_images=noise_imgs[1:],\n",
     "         save_all=True, duration=1000, loop=0)\n",
     "\n",
     "img = dark_imgs[0]\n",
-    "img.save(fp=figure_prefix + '_dark.gif', format='GIF', append_images=dark_imgs[1:],\n",
+    "img.save(fp=figure_prefix + 'dark.gif', format='GIF', append_images=dark_imgs[1:],\n",
     "         save_all=True, duration=1000, loop=0)"
    ]
   },
@@ -483,7 +483,7 @@
    ],
    "source": [
     "fig = plot_dist(dist, gain, gamma, dataset_name=dataset_name)\n",
-    "fig.savefig(figure_prefix + '_rgb_histogram_small.eps', format='eps')"
+    "fig.savefig(figure_prefix + 'rgb_histogram_small.eps', format='eps')"
    ]
   },
   {
@@ -572,7 +572,7 @@
     "# This calculation takes some time. Sit back and do something else while you wait\n",
     "img, *imgs = make_hist_gif(cfg_file, root,\n",
     "                     [(1.0, 1.0), (0.75, 1.6), (0.5, 2.2)])\n",
-    "img.save(fp=figure_prefix +'_histogram.gif', format='GIF', append_images=imgs,\n",
+    "img.save(fp=figure_prefix +'histogram.gif', format='GIF', append_images=imgs,\n",
     "         save_all=True, duration=1000, loop=0)"
    ]
   },
@@ -884,14 +884,14 @@
     "img_path, depth_path, label_path = dataset.get_path(5)\n",
     "\n",
     "fig = bar_plot(cfg, img_path, depth_path, label_path)\n",
-    "fig.savefig(figure_prefix + '_result_grid.eps', format='eps', dpi=300)"
+    "fig.savefig(figure_prefix + 'result_grid.eps', format='eps', dpi=300)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, let's look at the roll played by our input channels with an ablation study. "
+    "Next, let's look at the role played by our input channels with an ablation study. "
    ]
   },
   {
@@ -1006,6 +1006,13 @@
     "ax1.legend(['rgb low-light', 'rgbd low-light', 'rgb', 'rgbd'])\n",
     "\n",
     "fig.savefig(figure_prefix +'ablation_study_gray.eps', format='eps')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally, let's investigate the role of noise augmentation."
    ]
   },
   {
