Break dataloaders out into seperate repo

--- a/visualization_scripts/Artificial Darkening Demo.ipynb
+++ b/visualization_scripts/Artificial Darkening Demo.ipynb
@@ -13,9 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deeplab3.dataloaders import make_dataset\n",
-    "from deeplab3.dataloaders import custom_transforms as tr\n",
-    "from deeplab3.dataloaders.utils import decode_segmap\n",
+    "from dataloaders import make_dataset\n",
+    "from dataloaders import custom_transforms as tr\n",
+    "from dataloaders.utils import decode_segmap\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import transforms\n",
     "import matplotlib\n",
