--- a/visualization_scripts/Data_Browser.ipynb
+++ b/visualization_scripts/Data_Browser.ipynb
@@ -15,9 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deeplab3.dataloaders import make_dataset\n",
-    "from deeplab3.dataloaders import custom_transforms as tr\n",
-    "from deeplab3.dataloaders.utils import decode_segmap\n",
+    "from dataloaders import make_dataset\n",
+    "from dataloaders import custom_transforms as tr\n",
+    "from dataloaders.utils import decode_segmap\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import transforms\n",
     "import matplotlib.pyplot as plt\n",
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a fixed semantic segmentation labels color palette for each dataset. Use deeplab3.dataloaders.get_label_colors to retrieve the color palette."
+    "There is a fixed semantic segmentation labels color palette for each dataset. Use dataloaders.get_label_colors to retrieve the color palette."
    ]
   },
   {
@@ -258,7 +258,7 @@
     }
    ],
    "source": [
-    "from deeplab3.dataloaders import get_label_colors\n",
+    "from dataloaders import get_label_colors\n",
     "\n",
     "font = {'size'   : 16}\n",
     "\n",
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deeplab3.dataloaders.utils import sample_distribution"
+    "from dataloaders.utils import sample_distribution"
    ]
   },
   {
