--- a/visualization_scripts/Model_Browser.ipynb
+++ b/visualization_scripts/Model_Browser.ipynb
@@ -15,9 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deeplab3.dataloaders import make_dataset\n",
-    "from deeplab3.dataloaders import custom_transforms as tr\n",
-    "from deeplab3.dataloaders.utils import decode_segmap\n",
+    "from dataloaders import make_dataset\n",
+    "from dataloaders import custom_transforms as tr\n",
+    "from dataloaders.utils import decode_segmap\n",
     "from deeplab3.utils import model_utils\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import transforms\n",
@@ -145,7 +145,7 @@
    "source": [
     "import torch\n",
     "import os\n",
-    "from deeplab3.dataloaders import make_data_loader\n",
+    "from dataloaders import make_data_loader\n",
     "from deeplab3.modeling.sync_batchnorm.replicate import patch_replication_callback\n",
     "from deeplab3.modeling.deeplab import *"
    ]
@@ -1664,7 +1664,7 @@
     }
    ],
    "source": [
-    "from deeplab3.dataloaders import get_label_colors\n",
+    "from dataloaders import get_label_colors\n",
     "\n",
     "#Class colors for reference\n",
     "labels = [x.replace('_', ' ') for x in dataset.loader.class_names]\n",
