--- a/visualization_scripts/RGB-D Data Distributions.ipynb
+++ b/visualization_scripts/RGB-D Data Distributions.ipynb
@@ -15,16 +15,16 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "from deeplab3.config.defaults import get_cfg_defaults\n",
-    "from deeplab3.dataloaders.utils import sample_distribution\n",
-    "from deeplab3.dataloaders.utils import decode_segmap\n",
+    "from dataloaders.utils import sample_distribution\n",
+    "from dataloaders.utils import decode_segmap\n",
     "\n",
-    "from deeplab3.dataloaders.datasets.cityscapes import CityscapesSegmentation\n",
-    "from deeplab3.dataloaders.datasets.coco import COCOSegmentation\n",
-    "from deeplab3.dataloaders.datasets.sunrgbd import RGBDSegmentation\n",
-    "from deeplab3.dataloaders.datasets.scenenet import SceneNetSegmentation\n",
+    "from dataloaders.datasets.cityscapes import CityscapesSegmentation\n",
+    "from dataloaders.datasets.coco import COCOSegmentation\n",
+    "from dataloaders.datasets.sunrgbd import RGBDSegmentation\n",
+    "from dataloaders.datasets.scenenet import SceneNetSegmentation\n",
     "\n",
     "\n",
-    "from deeplab3.dataloaders.SampleLoader import SampleLoader"
+    "from dataloaders.SampleLoader import SampleLoader"
    ]
   },
   {
