--- a/visualization_scripts/compare_models.ipynb
+++ b/visualization_scripts/compare_models.ipynb
@@ -15,7 +15,7 @@
     "import json\n",
     "import datetime\n",
     "\n",
-    "from deeplab3.dataloaders import make_data_loader\n",
+    "from dataloaders import make_data_loader\n",
     "from deeplab3.config.defaults import get_cfg_defaults\n",
     "from deeplab3.test import Tester\n",
     "\n",
